# essay-picks-rss

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml
.github/workflows/: ci-pages.yml  ingest-chatgpt.yml
data/runs/: 2026-07-06-498a975ad451694f.json  2026-07-07-d8744814332f1a35.json  2026-07-08-55399a3087f2aeab.json  2026-07-09-67fcd7e46ae8f5be.json  2026-07-11-9ba55fa57d66505a.json  2026-07-12-c3b074e373d6a10e.json  2026-07-13-067accf28dfe8775.json  2026-07-14-98d1b5e0341b4096.json  2026-07-15-f6dcd094ef96b4a7.json  2026-07-16-6ed411f680480a61.json  2026-07-17-9cc5ca79104df714.json  2026-07-18-2014251736ed35bd.json  2026-07-19-58c285a18ad54959.json  2026-07-21-dc2146d1818148ab.json  2026-07-22-a277fb56a08be7f2.json  2026-07-23-c2f083a25274c087.json
docs/: architecture.md
docs/adr/: 0001-immutable-static-publisher.md  0002-url-and-duplicate-identity.md  0003-untrusted-content-boundary.md  0004-manual-core-chrome-beta.md  0005-time-and-guid-semantics.md  0006-git-and-pages-boundaries.md  0006-unbounded-feed-retention.md  0007-hosted-github-intake.md  0008-legacy-backfill.md
public/: feed.xml  index.html
public/about/: index.html
public/archive/: index.html
src/essay_picks/: __init__.py  __main__.py  canonical.py  cli.py  config.py  errors.py  extract.py  models.py  publisher.py  render.py  repository.py  service.py
src/essay_picks/static/: style.css
src/essay_picks/templates/: _article.html  about.html  archive.html  base.html  index.html
tests/: conftest.py  test_canonical.py  test_cli.py  test_extract.py  test_publisher.py  test_repository.py  test_security_boundaries.py  test_service.py
tests/fixtures/: corrupted_suffix_single_rss.md
