[project]
name = "essay-picks-rss"
version = "0.1.0"
description = "Deterministic ChatGPT daily essay picks to RSS and static HTML publisher"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Manoj Vemuri" }]
dependencies = [
  "bleach>=6.2",
  "defusedxml>=0.7.1",
  "filelock>=3.18",
  "jinja2>=3.1",
  "markdown-it-py>=3.0",
  "pydantic>=2.11",
  "pyyaml>=6.0",
  "typer>=0.27.0",
]

[project.scripts]
essay-picks = "essay_picks.cli:app"

[dependency-groups]
dev = [
  "hypothesis>=6.130",
  "mypy>=1.15",
  "pip-audit>=2.9",
  "pytest>=8.3",
  "pytest-cov>=6.1",
  "ruff>=0.11",
  "types-bleach>=6.2",
  "types-defusedxml>=0.7",
  "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/essay_picks"]

[tool.hatch.build]
include = [
  "src/essay_picks/**/*.py",
  "src/essay_picks/templates/**/*.html",
  "src/essay_picks/static/**/*.css",
  "src/essay_picks/static/fonts/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "--strict-config",
  "--strict-markers",
  "--cov=essay_picks",
  "--cov-report=term-missing",
]

[tool.coverage.run]
branch = true
source = ["essay_picks"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "S", "RUF"]
ignore = ["N818", "S101"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
files = ["src/essay_picks"]
